Add Update player to API but dosn't really do that
